# rineiNET

./: CMakeLists.txt  CMakePresets.json  README.md
client/: CMakeLists.txt  dllmain.cpp  main.cpp
client/private/: Server.cpp
client/public/: Memory.h  Packet.h  Server.h
cnc/: CMakeLists.txt  Color.h  main.cpp
dropper/: CMakeLists.txt
proxy/: CMakeLists.txt
server/: CMakeLists.txt  main.cpp
server/private/: C2Client.cpp  Client.cpp
server/public/: C2Client.h  Client.h
test/: server-auth.py
